Fix T70287: Connect vertex path can create duplicate edges/faces